# PorousMedium1D

./: CMakeLists.txt  Initial_data.cc  Main.cc  Parameters.hh  README.md  Thomas_tridiagonal_solver.cc
Utils/: Plot.py3  README.md  ffmpeg_list_generator.sh
include/: Check_parameters.hh  Declare_functions.hh
